test/bad/classes/destructor02.px

class A def
    destructor def
        skip

class B(A) def
    destructor def
        super()
